--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.18.2",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "zod": "3.22.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
